[package]
name = "p3-sha512"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10.9"
keccak-hash = "0.12"
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-util = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-circle = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-blake3 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-poseidon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3.git", rev = "6312dd2cccfcb634e9b268234d16fb6505e7e441", default-features = false }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }